align the input label correctly

--- a/client/src/styles/components/_form-field.scss
+++ b/client/src/styles/components/_form-field.scss
@@ -77,6 +77,7 @@
     color: #0e1c74;
     font-size: 0.875rem;
     font-weight: 600;
+    text-align: start;
     // Add the Assistant font once the chat is merged
   }
   
